k8s/apps/games/crafty/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crafty
  labels:
    app.kubernetes.io/name: crafty
    app.kubernetes.io/instance: crafty
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crafty
      app.kubernetes.io/instance: crafty
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crafty
        app.kubernetes.io/instance: crafty
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 180
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: crafty
          image: registry.gitlab.com/crafty-controller/crafty-4:4.11.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 0
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: 6Gi
            limits:
              memory: 12Gi
          startupProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /crafty/app/config
            - name: servers
              mountPath: /crafty/servers
            - name: backups
              mountPath: /crafty/backups
            - name: logs
              mountPath: /crafty/logs
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: piraeus-replicated
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: servers
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: piraeus-replicated
        resources:
          requests:
            storage: 40Gi
    - metadata:
        name: backups
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: piraeus-replicated
        resources:
          requests:
            storage: 30Gi
    - metadata:
        name: logs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: piraeus-replicated
        resources:
          requests:
            storage: 2Gi
